feat: Estrutura inicial e inicializando pagina Pokemons ou Home

--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
-            ],
+							{
+								"input": "src/assets/styles/my-theme.scss"
+							},
+							"src/assets/styles/main.scss"
+						],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/assets/styles"]
+            },
             "scripts": []
           },
           "configurations": {
@@ -94,13 +100,11 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/assets/styles/main.scss"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/assets/styles"]
+            },
             "scripts": []
           }
         }
