--- a/angular.json
+++ b/angular.json
@@ -26,16 +26,13 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-							{
-								"input": "src/assets/styles/my-theme.scss"
-							},
-							"src/assets/styles/main.scss"
-						],
+              {
+                "input": "src/assets/styles/my-theme.scss"
+              },
+              "src/assets/styles/main.scss"
+            ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/assets/styles"]
             },
