--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,13 +4,8 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": ["node"],
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": false
   },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+  "files": ["src/main.ts", "src/polyfills.ts"],
+  "include": ["src/**/*.d.ts"]
 }
